fix z-index

--- a/app/_assets/stylesheets/header-v2.less
+++ b/app/_assets/stylesheets/header-v2.less
@@ -6,7 +6,7 @@ header.navbar-v2 {
   height: 60px;
   background: white;
   box-shadow: 0 8px 24px rgba(4, 53, 88, 0.1);
-  z-index: 10;
+  z-index: 100;
   padding: 0 24px;
 
   a.skip-main {
